objects/copado_labs__Product_Configuration_Commits__c.object
<CustomObject>
    <fields>
        <fullName>copado_labs__API_Name__c</fullName>
        <label>API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado_labs__Commit_Name__c</fullName>
        <displayFormat>PCR-{0000}</displayFormat>
        <label>Commit Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>copado_labs__User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Product Configuration Rule Commits</relationshipLabel>
        <relationshipName>Product_Configuration_Rule_Commits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Configuration Rule Commit</label>
    <nameField>
        <label>Product Configuration Commits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configuration Rule Commits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>